Updated AirImport Master

--- a/src/app/airexport/airexport/airexport-edit/airexport-edit.component.html
+++ b/src/app/airexport/airexport/airexport-edit/airexport-edit.component.html
@@ -109,12 +109,12 @@
               </div>
             </div>
             <div class="form-group row">
-              <label class="col-sm-4 form-label form-lable-sm">GrWt</label>
+              <label class="col-sm-4 form-label form-lable-sm">Gr.Wt</label>
               <div class="col-sm-3">
                 <app-input maxlength="100" formControlName="mbl_mawb_weight" type="number"
                   [dec]="gs.globalConstants.global_dec_places"></app-input>
               </div>
-              <label class="col-sm-2 form-label form-lable-sm">ChWt</label>
+              <label class="col-sm-2 form-label form-lable-sm">Ch.Wt</label>
               <div class="col-sm-3">
                 <app-input maxlength="100" formControlName="mbl_mawb_chwt" type="number"
                   [dec]="gs.globalConstants.global_dec_places"></app-input>
@@ -214,10 +214,10 @@
                   <th>SHIPPER</th>
                   <th>CONSIGNEE</th>
                   <th>PCS</th>
-                  <th>HANDLED_BY</th>
+                  <th>HANDLED BY</th>
                   <th>ETD</th>
                   <th>ETA</th>
-                  <th>CREATED_BY</th>
+                  <th>CREATED-BY</th>
                   <th>CREATED DATE</th>
                   <th>DELETE</th>
                 </tr>
@@ -252,11 +252,11 @@
                   </td>
 
                   <td>
-                    <label>{{iRow.get('hbl_issued_date')?.value}}</label>
+                    <label>{{iRow.get('hbl_issued_date')?.value | date: gs.globalConstants.global_display_date_format}}</label>
                   </td>
 
                   <td>
-                    <label>{{iRow.get('hbl_delivery_date')?.value}}</label>
+                    <label>{{iRow.get('hbl_delivery_date')?.value | date: gs.globalConstants.global_display_date_format}}</label>
                   </td>
 
                   <td>
@@ -264,7 +264,7 @@
                   </td>
 
                   <td>
-                    <label>{{iRow.get('hbl_date')?.value}}</label>
+                    <label>{{iRow.get('rec_created_date')?.value | date:gs.globalConstants.global_output_datetime_format }}</label>
                   </td>
 
                   <td align="centre" (click)="deleteRow(i,iRow.get('hbl_houseno')?.value,iRow.get('hbl_id')?.value)"
