--- a/src/app/airimport/airimporth/airimporth-edit/airimporth-edit.component.html
+++ b/src/app/airimport/airimporth/airimporth-edit/airimporth-edit.component.html
@@ -78,6 +78,12 @@
                 <app-input maxlength="100" formControlName="hbl_shipper_add4" [case]="'UPPER'"></app-input>
               </div>
             </div>
+            <div class="form-group row">
+              <label class="col-sm-4 form-label form-lable-sm"></label>
+              <div class="col-sm-8">
+                <app-input maxlength="100" formControlName="hbl_shipper_add5" [case]="'UPPER'"></app-input>
+              </div>
+            </div>
 
             <div class="form-group row">
               <label class="col-sm-4 form-label form-lable-sm" for="">Consignee</label>
@@ -225,7 +231,8 @@
             <div class="form-group row">
               <label class="col-sm-4 form-label form-lable-sm">Final.Destination</label>
               <div class="col-sm-8">
-                <app-input formControlName="hbl_place_final" name="hbl_place_final" maxlength="100" [case]="'UPPER'"></app-input>
+                <app-input formControlName="hbl_place_final" name="hbl_place_final" maxlength="100"
+                  [case]="'UPPER'"></app-input>
               </div>
             </div>
             <div class="form-group row">
@@ -242,9 +249,9 @@
               </div>
               <label class="col-sm-2 form-label form-lable-sm">Unit</label>
               <div class="col-sm-3">
-                <auto-complete formControlName="hbl_uom_name" name="hbl_uom_name"
-                  id="hbl_uom_name" (CallBack)="callBack($event)" table="param" subtable="UNIT-MASTER"
-                  [company_id]="getCompanyId()" [url]="url" case="upper"
+                <auto-complete formControlName="hbl_uom_name" name="hbl_uom_name" id="hbl_uom_name"
+                  (CallBack)="callBack($event)" table="param" subtable="UNIT-MASTER" [company_id]="getCompanyId()"
+                  [url]="url" case="upper"
                   display_column="[{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]"></auto-complete>
               </div>
             </div>
@@ -261,7 +268,7 @@
               </div>
             </div>
             <div class="form-group row">
-              <label class="col-sm-4 form-label form-lable-sm">ChWt</label>
+              <label class="col-sm-4 form-label form-lable-sm">Ch.Wt</label>
               <div class="col-sm-3">
                 <app-input formControlName="hbl_chwt" name="hbl_chwt" id="hbl_chwt" type="number"
                   (blur)="findTotal($event)" [dec]="gs.globalConstants.global_dec_places"></app-input>
@@ -332,6 +339,49 @@
         <div class="row">
           <div class="col-sm-6">
             <div class="form-group row">
+              <label class="col-sm-4 form-label form-lable-sm">Paid.Status</label>
+              <div class="col-sm-5">
+                <auto-complete formControlName="hbl_paid_status_name" name="hbl_paid_status_name"
+                  id="hbl_paid_status_name" (CallBack)="callBack($event)" table="param" subtable="PAID_STATUS"
+                  [company_id]="getCompanyId()" [url]="url" case="upper"
+                  display_column="[{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]"></auto-complete>
+              </div>
+              <div class="col-sm-3">
+                <app-input maxlength="100" formControlName="hbl_paid_remarks" name="hbl_paid_remarks"
+                  [case]="'UPPER'"></app-input>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-4 form-label form-lable-sm">Frt.Release.Status</label>
+              <div class="col-sm-8">
+                <app-combobox [dataSource]="frt_release_status" [valueColumn]="'key'" [displayColumn]="'value'"
+                  formControlName="hbl_cargo_release_status" name="hbl_cargo_release_status"></app-combobox>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-4 form-label form-lable-sm">Customs Release Status</label>
+              <div class="col-sm-8">
+                <app-combobox [dataSource]="cust_release_status" [valueColumn]="'key'" [displayColumn]="'value'"
+                  formControlName="hbl_custom_reles_status" name="hbl_custom_reles_status"></app-combobox>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-4 form-label form-lable-sm">Delivery Status</label>
+              <div class="col-sm-8">
+                <app-combobox [dataSource]="delivery_status" [valueColumn]="'key'" [displayColumn]="'value'"
+                  formControlName="hbl_is_delivery" name="hbl_is_delivery"></app-combobox>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-4 form-label form-lable-sm"></label>
+              <div class="col-sm-8">
+                <app-checkbox formControlName="hbl_is_itshipment"></app-checkbox>
+                <label class="ms-1 form-label form-label-sm">IT Shipment</label>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="form-group row">
               <label class="col-sm-4 form-label form-lable-sm"></label>
               <div class="col-sm-8">
                 <app-checkbox formControlName="hbl_is_pl"></app-checkbox>
@@ -352,49 +402,8 @@
                 <label class="ms-1 form-label form-label-sm">Carrier AN</label>
               </div>
             </div>
-            <div class="form-group row">
-              <label class="col-sm-4 form-label form-lable-sm">Customs Release Status</label>
-              <div class="col-sm-8">
-                <app-combobox [dataSource]="cust_release_status" [valueColumn]="'key'" [displayColumn]="'value'"
-                  formControlName="hbl_custom_reles_status" name="hbl_custom_reles_status"></app-combobox>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-sm-4 form-label form-lable-sm">Delivery Status</label>
-              <div class="col-sm-8">
-                <app-combobox [dataSource]="delivery_status" [valueColumn]="'key'" [displayColumn]="'value'"
-                  formControlName="hbl_is_delivery" name="hbl_is_delivery"></app-combobox>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6">
-            <div class="form-group row">
-              <label class="col-sm-4 form-label form-lable-sm">Paid.Status</label>
-              <div class="col-sm-5">
-                <auto-complete formControlName="hbl_paid_status_name" name="hbl_paid_status_name" id="hbl_paid_status_name"
-                  (CallBack)="callBack($event)" table="param" subtable="PAID_STATUS" [company_id]="getCompanyId()"
-                  [url]="url" case="upper"
-                  display_column="[{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]"></auto-complete>
-              </div>
-              <div class="col-sm-3">
-                <app-input maxlength="100" formControlName="hbl_paid_remarks" name="hbl_paid_remarks"
-                  [case]="'UPPER'"></app-input>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-sm-4 form-label form-lable-sm">Frt.Release.Status</label>
-              <div class="col-sm-8">
-                <app-combobox [dataSource]="frt_release_status" [valueColumn]="'key'" [displayColumn]="'value'"
-                  formControlName="hbl_cargo_release_status" name="hbl_cargo_release_status"></app-combobox>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-sm-4 form-label form-lable-sm"></label>
-              <div class="col-sm-8">
-                <app-checkbox formControlName="hbl_is_itshipment"></app-checkbox>
-                <label class="ms-1 form-label form-label-sm">IT Shipment</label>
-              </div>
-            </div>
+
+
           </div>
         </div>
       </div>
